# PASTIS

./: .gitmodules  CMakeLists.txt  CMakeLists.txt-ADEPT  Internals.md  README.md
docs/docs/: README.md
docs/website/: siteConfig.js
docs/website/blog/: 2020-01-07-introducing-distal.md
inc/: Alphabet.hpp  Constants.hpp  DistFastaData.hpp  DistPWRunner.hpp  FastaData.hpp  ParallelOps.hpp  ScoreMat.hpp  TraceUtils.hpp  Types.hpp  logger.hpp  macros.hpp  sim_search.hpp  sr.hpp  util.hpp
inc/align/: AdeptBSWAligner.hpp  PWAlign.hpp  SeqanFullAligner.hpp  SeqanXdropAligner.hpp
inc/kmer/: Kmer.hpp  KmerOps.hpp
include/: AlignmentInfo.hpp  Alphabet.hpp  Constants.hpp  DistributedFastaData.hpp  DistributedPairwiseRunner.hpp  NearestKmers2.hpp  ScoreMat.hpp  Utils.hpp
include/kmer/: CommonKmers.hpp  Kmer.hpp  KmerIntersectSR.hpp  KmerOps.hpp  MatrixEntry.hpp  SubKmerIntersectSR.hpp  sr.hpp
include/pw/: BandedAligner.hpp  FullAligner.hpp  OverlapFinder.hpp  PairwiseFunction.hpp  SeedExtendXdrop.hpp
pysrc/: acc_calc.py  align_filter.py  lastal_output_modifier.py
pysrc/notebooks/local/: astral_k6_100_ba5_align.ipynb  astral_k6_100_fa_align.ipynb  astral_k6_100_overlaps.ipynb  astral_k6_100_xa_align.ipynb
src/: Alphabet.cpp  Constants.cpp  DistFastaData.cpp  DistPWRunner.cpp  DistributedFastaData.cpp  DistributedPairwiseRunner.cpp  FastaData.cpp  NearestKmers2.cpp  ParallelOps.cpp  ScoreMat.cpp  logger.cpp  main.cpp  sim_search.cpp  util.cpp
src/align/: AdeptBSWAligner.cpp  SeqanFullAligner.cpp  SeqanXdropAligner.cpp
src/kmer/: KmerOps.cpp
src/pw/: BandedAligner.cpp  FullAligner.cpp  OverlapFinder.cpp  SeedExtendXdrop.cpp
tests/: CMakeLists.txt
(+1 files in other folders)
